Noostros y servicios actualizados

--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <title>Sobre Nosotros - Paws Coffee</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .equipo {
+            display: flex;
+            align-items: flex-start;
+            gap: 20px;
+            margin-top: 2rem;
+        }
+
+        .equipo img {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 10px;
+            border: 2px solid #ccc;
+        }
+
+        .info-miembro {
+            max-width: 600px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -25,21 +45,63 @@
             <h1>Sobre Nosotros</h1>
             <p>Conoce al equipo de desarrollo detrás del proyecto semestral:</p>
 
-            <div style="margin-top: 2rem;">
-                <h3>Nathaly Bonilla</h3>
-                <p><strong>Cédula:</strong> 8-XXXX-XXXX</p>
-                <p><strong>Carrera:</strong> Ingeniería en Software</p>
-                <p><strong>Experiencia:</strong> Apasionada por la programación web y el análisis de datos. Ha trabajado con HTML, CSS, SQL, y herramientas de visualización como Power BI.</p>
+            <div class="equipo">
+                <img src="FotoN.jpeg" alt="Nathaly Bonilla">
+                <div class="info-miembro">
+                    <h3>Nathaly Bonilla</h3>
+                    <p><strong>Cédula:</strong> 8-1021-1364</p>
+                    <p><strong>Carrera:</strong> Ingeniería en Software</p>
+                    <p><strong>Experiencia:</strong> Apasionada por la programación web y el análisis de datos. Ha trabajado con HTML, CSS, SQL, y herramientas de visualización como Power BI.</p>
+                </div>
             </div>
 
-            <div style="margin-top: 2rem;">
-                <h3>[Nombre del compañero 2]</h3>
-                <p><strong>Cédula:</strong> [8-XXXX-XXXX]</p>
-                <p><strong>Carrera:</strong> [Ejemplo: Ing. en Sistemas]</p>
-                <p><strong>Experiencia:</strong> [Ejemplo: Manejo de bases de datos y backend en Java]</p>
+            <div class="equipo">
+                <img src="FotoA.jpg" alt="Abdiel Abrego">
+                <div class="info-miembro">
+                    <h3>Abdiel Abrego</h3>
+                    <p><strong>Cédula:</strong> 9-765-799</p>
+                    <p><strong>Carrera:</strong> Ingeniería en Software</p>
+                    <p><strong>Experiencia:</strong> [Ejemplo: Manejo de bases de datos y backend en Java]</p>
+                </div>
+            </div>
+                        <div class="equipo">
+                <img src="FotoM.jpeg" alt="Maria Quiñones">
+                <div class="info-miembro">
+                    <h3>Maria Quiñones</h3>
+                    <p><strong>Cédula:</strong> 8-988-1507</p>
+                    <p><strong>Carrera:</strong> Ingeniería en Software</p>
+                    <p><strong>Experiencia:</strong> [Ejemplo: Manejo de bases de datos y backend en Java]</p>
+                </div>
+            </div>
+                        <div class="equipo">
+                <img src="FotoC.png" alt="Amanda Green">
+                <div class="info-miembro">
+                    <h3>Amanda Green</h3>
+                    <p><strong>Cédula:</strong>  8-1023-1761</p>
+                    <p><strong>Carrera:</strong> Ingeniería en Software</p>
+                    <p><strong>Experiencia:</strong> [Ejemplo: Manejo de bases de datos y backend en Java]</p>
+                </div>
+            </div>
+                        <div class="equipo">
+                <img src="FotoE.jpg" alt="Eimy Felix">
+                <div class="info-miembro">
+                    <h3>Eimy Felix</h3>
+                    <p><strong>Cédula:</strong> 8-1010-2376 </p>
+                    <p><strong>Carrera:</strong> Ingeniería en Software</p>
+                    <p><strong>Experiencia:</strong> [Ejemplo: Manejo de bases de datos y backend en Java]</p>
+                </div>
+            </div>
+                        <div class="equipo">
+                <img src="FotoW.png" alt="Wanytchy Joseph">
+                <div class="info-miembro">
+                    <h3>Wanytchy Joseph</h3>
+                    <p><strong>Cédula:</strong> 8-1020-1086 </p>
+                    <p><strong>Carrera:</strong> Ingeniería en Software</p>
+                    <p><strong>Experiencia:</strong> [Ejemplo: Manejo de bases de datos y backend en Java]</p>
+                </div>
             </div>
 
-            <!-- Repite este bloque para cada integrante -->
+    
         </section>
     </main>
 
