--- a/gerente.html
+++ b/gerente.html
@@ -6,19 +6,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <div class="logo">🐾 PAWS COFFEE</div>
-            <ul class="nav-links">
-                <li><a href="#">Ventas</a></li>
-                <li><a href="#">Inventario</a></li>
-                <li><a href="#">Horarios</a></li>
-                <li><a href="#">Salarios</a></li>
-                <li><a href="#">Reportes Financieros</a></li>
-                <li><a href="login.html" class="admin-btn">Cerrar Sesión</a></li>
-            </ul>
-        </nav>
-    </header>
+<!-- Navegación -->
+<header>
+    <nav class="container">
+        <div class="logo">🐾 PAWS COFFEE</div>
+        <ul class="nav-links">
+            <li><a href="home.html">Inicio</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="menu.html">Menú</a></li>
+            <li><a href="reservas.html">Reservas</a></li>
+            <li><a href="nosotros.html">Nosotros</a></li>
+        </ul>
+    </nav>
+</header>
+
 
     <main style="margin-top: 100px;" class="container">
         <h1>Panel del Gerente</h1>
