--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <!-- Header con logo, buscador y redes -->
     <header>
         <nav class="container">
@@ -16,7 +17,7 @@
                 <li><a href="menu.html">Menú</a></li>
                 <li><a href="reservas.html">Reservas</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="login.html" class="admin-btn">Login</a></li>
+                <li><a href="login.jsp" class="admin-btn">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -54,10 +55,11 @@
                 <a href="menu.html">Menú</a> |
                 <a href="reservas.html">Reservas</a> |
                 <a href="nosotros.html">Nosotros</a> |
-                <a href="login.html">Logout</a>
+                <a href="logout.jsp">Cerrar Sesión</a>
             </nav>
             <p>&copy; 2025 Paws Coffee. Todos los derechos reservados.</p>
         </div>
     </footer>
+
 </body>
 </html>
