--- a/home.html
+++ b/home.html
@@ -27,19 +27,19 @@
             <h1>Últimas Noticias</h1>
             <ul>
                 <li>
-                    <h3>Artículo: Tendencia pet-friendly en cafeterías</h3>
-                    <p>La tendencia de cafeterías amigables con mascotas crece en América Latina.</p>
-                    <a href="https://www.petfoodindustry.com/articles/12345-pet-friendly-cafes-latin-america" target="_blank">Leer más</a>
+                    <h3>Artículo: ¿El café es malo para los perros?</h3>
+                    <p>Descubre los riesgos del consumo de café en mascotas, incluyendo síntomas de intoxicación por cafeína.</p>
+                    <a href="https://www.masterclass.com/articles/is-coffee-bad-for-dogs" target="_blank">Leer más</a>
                 </li>
                 <li>
-                    <h3>Artículo: Café y bienestar animal</h3>
-                    <p>Un espacio donde el amor por los animales se une con el aroma del café.</p>
-                    <a href="https://elpais.com/bienestar/cafe-y-mascotas" target="_blank">Leer artículo</a>
+                    <h3>Artículo: ¿Pueden los perros beber café?</h3>
+                    <p>Un análisis sobre cómo la cafeína afecta a los perros según expertos veterinarios.</p>
+                    <a href="https://www.petmd.com/dog/nutrition/can-dogs-drink-coffee" target="_blank">Leer artículo</a>
                 </li>
                 <li>
-                    <h3>Video: Tour por Paws Coffee</h3>
-                    <p>Descubre cómo sería la experiencia en una cafetería pet-friendly.</p>
-                    <a href="https://www.youtube.com/watch?v=XXXXXXX" target="_blank">Ver video</a>
+                    <h3>Video: Tour por un café pet‑friendly en NYC</h3>
+                    <p>Acompáñanos en este recorrido por una cafetería que combina café y mascotas en Nueva York.</p>
+                    <a href="https://www.youtube.com/watch?v=--YlKR8QUnw" target="_blank">Ver video</a>
                 </li>
             </ul>
         </section>
@@ -48,7 +48,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>🐾 Síguenos: @PawsCoffeePanama | <a href="https://www.google.com" target="_blank">🔍 Buscar</a></p>
+            <p>🐾 Síguenos: @PawsCoffeePanama | <a href="https://www.google.com/search?q=paws+coffee+panama" target="_blank">🔍 Buscar</a></p>
             <nav>
                 <a href="index.html">Inicio</a> |
                 <a href="servicios.html">Servicios</a> |
