Cambios en cliente, home y menú

--- a/cliente.html
+++ b/cliente.html
@@ -11,7 +11,7 @@
     <nav class="container">
         <div class="logo">🐾 PAWS COFFEE</div>
         <ul class="nav-links">
-            <li><a href="home.html">Inicio</a></li>
+            <li><a href="home.jsp">Inicio</a></li>
             <li><a href="servicios.html">Servicios</a></li>
             <li><a href="menu.html">Menú</a></li>
             <li><a href="reservas.html">Reservas</a></li>
