--- a/menu.html
+++ b/menu.html
@@ -10,12 +10,11 @@
         <nav class="container">
             <div class="logo">🐾 PAWS COFFEE</div>
             <ul class="nav-links">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="home.jsp">Inicio</a></li>
                 <li><a href="menu.html">Menú</a></li>
-                <li><a href="reservas.html">Reservas</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="login.html" class="admin-btn">Login</a></li>
+                <li><a href="reservas.html">Mis Reservas</a></li>
+                <li><a href="compra.html">Mi pedido</a>
+                <li><a href="logout.jsp">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
