--- a/servicios.html
+++ b/servicios.html
@@ -40,7 +40,7 @@
         <nav class="container">
             <div class="logo">🐾 PAWS COFFEE</div>
             <ul class="nav-links">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="home.jsp">Inicio</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="menu.html">Menú</a></li>
                 <li><a href="reservas.html">Reservas</a></li>
@@ -57,10 +57,6 @@
                 <a href="menu.html" class="servicio-card">
                     <span>☕</span>
                     Café y alimentos para humanos y mascotas
-                </a>
-                <a href="#" class="servicio-card">
-                    <span>🧸</span>
-                    Juguetes y accesorios
                 </a>
                 <a href="reservas.html" class="servicio-card">
                     <span>🎉</span>
