modificación en reporte financiero

--- a/gerente.html
+++ b/gerente.html
@@ -20,32 +20,34 @@
     </nav>
 </header>
 
+<main style="margin-top: 100px;" class="container">
+    <h1>Panel del Gerente</h1>
 
-    <main style="margin-top: 100px;" class="container">
-        <h1>Panel del Gerente</h1>
+    <section>
+        <h2>Modificación de Horarios</h2>
+        <p>Asignación y ajustes de turnos.</p>
+    </section>
 
-        <section>
-            <h2>Modificación de Horarios</h2>
-            <p>Asignación y ajustes de turnos.</p>
-        </section>
+    <section>
+        <h2>Información Salarial</h2>
+        <ul>
+            <li>Barista: $700</li>
+            <li>Mesero: $650</li>
+            <li>Gerente: $1200</li>
+        </ul>
+    </section>
 
-        <section>
-            <h2>Información Salarial</h2>
-            <ul>
-                <li>Barista: $700</li>
-                <li>Mesero: $650</li>
-                <li>Gerente: $1200</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Reportes Financieros</h2>
-            <ul>
-                <li>Ventas por mes</li>
-                <li>Total de ingresos</li>
-                <li>Impuestos</li>
-            </ul>
-        </section>
-    </main>
+    <section>
+        <h2>Reportes Financieros</h2>
+        <ul>
+            <li><a href="reporteFinanciero.jsp">Ver Reporte Financiero (en tiempo real)</a></li>
+            <li>Ventas por mes</li>
+            <li>Total de ingresos</li>
+            <li>Impuestos</li>
+        </ul>
+    </section>
+</main>
 </body>
 </html>
+
+
