gestión de empleados

--- a/gerente.html
+++ b/gerente.html
@@ -26,6 +26,7 @@
     <section>
         <h2>Modificación de Horarios</h2>
         <p>Asignación y ajustes de turnos.</p>
+        <p><a href="gestionarHorario.jsp" class="cta-button">Gestionar Horario de Empleado</a></p>
     </section>
 
     <section>
